[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-task = "4.3"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
futures-lite = "1.12"
libc = "0.2"
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
once_cell = "1.16"
slab = "0.4"
socket2 = { version = "0.4", features = ["all"]}
tokio = "1.21"
tracing = "0.1"
